--- a/style.css
+++ b/style.css
@@ -34,15 +34,16 @@ header {
 
 .name {
     
-    flex: 8;
+    flex: 15;
     background-color: var(--secondary-text);
     color: var(--background);
     align-items: center;
     justify-content: flex-end;
     display: flex;
-    font-size: 40px;
+    font-size: 60px;
     font-weight: bold;
     border-radius: 0px 20px 20px 0px;
+    padding-right: 5px;
     
 
 }
@@ -73,10 +74,10 @@ nav {
 }
 
 figure {
-    height: 400px;
+    height: 600px;
   width: 100%;
   margin-bottom: 25px;
-  background-image: url(https://via.placeholder.com/400);
+  background-image: url(https://via.placeholder.com/1600?text=Placeholder+for+cover+image);
   background-size: cover;
   background-position: center;
   display: flex;
@@ -93,4 +94,111 @@ figure section {
     margin-right: 20px;
     font-size: 50px;
     align-items: center;
+}
+
+main {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+main article {
+    width:100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    margin:20px;
+}
+.left-panel-header {
+    height: 200px;
+    font-size: 60px;
+    color: var(--secondary-text);
+    flex: 2;
+    text-align: right;
+    line-height: 90%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+
+
+}
+
+.right-panel-text {
+    flex: 10;
+    margin: 10px;
+    padding:10px;
+    border-left: 3px solid var(--secondary-text);
+
+}
+
+.work-cards { 
+    display: flex;
+    flex-wrap: wrap;
+    justify-content:center;
+    
+}
+
+.card-main {
+    height: 300px;
+    width: 99%;
+    border: 3px solid var(--secondary-text);
+    margin: 0 1% 10px 0 ;
+
+    background-image:url(https://via.placeholder.com/1600?text=Placeholder+for+application+image);
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-end;
+}
+.card {
+    height: 300px;
+    width: 49%;
+    margin: 0 1% 10px 0 ;
+    background-image:url(https://via.placeholder.com/800?text=Placeholder+for+application+image);
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-end;
+}
+
+.card section, .card-main section {
+    background-color: var(--secondary-text);
+    padding: 20px 30px 30px 30px;
+    height: 40px;
+    margin-bottom: 40px;
+    margin-right: 20px;
+    font-size: 30px;
+    align-items: center;
+}
+
+ul {
+    
+    display: flex;
+    flex-wrap: nowrap;
+    align-items:flex-end;
+    justify-content: center;
+    color: var(--secondary-text);
+    font-size: 25px;
+    text-align: center;
+    
+    
+    
+}
+
+li {
+    
+    padding-top: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-left: 60px;
+    margin-right: 60px;
+    flex:1;    
+    color: var(--primary-text);
+    border-bottom: 3px solid var(--secondary-text);
+
+}
+
+
+a {
+    text-decoration: none;
+    color: inherit;
 }
