added new features to page

--- a/style.css
+++ b/style.css
@@ -1,34 +1,93 @@
 html {
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
+  scroll-behavior: smooth;
 }
 
-.card.small {
-  border-radius: 50px;
-}
 
 .card .card-title {
   font-size: 42px;
 }
 
-.card .card-content p {
-  font-size: 24px;
-  padding-top: 50px;
-  line-height: 40px;
+.card-action .btn {
+  width: 150px;
 }
-
 .parallax-container {
-  height: 500px;
+  height: 100vh;
 }
 
+.parallax {
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
+}
 
-@media screen and (max-width: 992px) {
-  .parallax-container {
-    height: 400px;
+.overlay-content {
+  text-align: center;
+  position: relative;
+  height: 100vh;
+}
+
+.overlay-darken {
+  filter: brightness(50%);
+}
+
+.overlay-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.btn {
+  width: 200px;
+  height: 50px;
+  color: white;
+  background-color: transparent;
+  border: 3px solid white;
+  font-size: 20px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.btn:hover,
+.btn:focus {
+  background-color: transparent;
+  box-shadow: 0 0 10px white;
+}
+
+.carousel .carousel-item {
+  width: 500px;
+}
+
+a.carousel-item {
+  border: 3px solid black;
+  border-radius: 15px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 60px;
+}
+
+.indicator-item {
+  border: 2px solid black;
+}
+.indicator-item.active {
+  border: 5px solid black;
+}
+
+.card {
+  height: 300px;
+}
+
+@media screen and (max-width: 1400px) {
+  .parallax {
+    background-position: 20%;
   }
-}
-
-@media screen and (max-width: 600px) {
-  .parallax-container {
-    height: 250px;
+  .carousel .carousel-item {
+    width: 350px;
+    height: 150px;
   }
 }
